Move files to top-level directory and remove package system
I learned more about the Java package system and realized there is no
need to use it in this project, since each file is a standalone program.