@@ -1,20 +1,18 @@
-package aoc;
-
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 
-public class d12p1 {
+public class d12p2 {
     public static void main(String[] args) throws IOException {
-        List<String> lines = Files.readAllLines(Paths.get("aoc/input/d12.txt"));
+        List<String> lines = Files.readAllLines(Path.of("input/d12.txt"));
         Grid grid = new Grid(lines);
-        Node end = grid.find();
-        // System.out.println(grid);
-        System.out.println(end.count());
+        int minimum = grid.minimumStart();
+        System.out.println(minimum);
     }
 }
 
@@ -22,6 +20,7 @@ public class d12p1 {
 class Grid {
     private Node[][] grid;
     private LinkedList<Node> queue = new LinkedList<>();
+    private LinkedList<Node> startList = new LinkedList<>();
 
     public Grid(List<String> lines) {
         grid = new Node[lines.size()][lines.get(0).length()];
@@ -30,14 +29,14 @@ class Grid {
             for (int j = 0; j < getHeight(); j++) {
                 Node newNode = new Node(line.charAt(j), new int[] {i, j});
                 grid[i][j] = newNode;
-                if (newNode.isStart()) {
-                    queue.add(newNode);
+                if (newNode.getName() == 'a') {
+                    startList.add(newNode);
                 }
             }
         }
     }
 
-    public Node find() {
+    private Node find() {
         queue.getFirst().setIsExplored();
         while (!queue.isEmpty()) {
             Node currentNode = queue.removeFirst();
@@ -53,6 +52,35 @@ class Grid {
             }
         }
         throw new Error("Could not find the end node.");
+    }
+
+    public int minimumStart() {
+        int minimum = Integer.MAX_VALUE;
+        while (!startList.isEmpty()) {
+            reset();
+            Node startNode = startList.removeFirst();
+            queue.add(startNode);
+            int count = Integer.MAX_VALUE;
+            try {
+                count = find().count();
+            } catch (Error e) {
+                // Naturally E might be unreachable starting from some points.
+                System.out.println("Unreachable from " + startNode);
+            }
+            if (count < minimum) {
+                minimum = count;
+            }
+        }
+        return minimum;
+    }
+
+    private void reset() {
+        queue.clear();
+        for (int i = 0; i < getWidth(); i++) {
+            for (int j = 0; j < getHeight(); j++) {
+                grid[i][j].reset();
+            }
+        }
     }
 
     private ArrayList<Node> getNeighbors(Node node) {
@@ -97,7 +125,6 @@ class Grid {
 class Node implements Iterable<Node> {
     private char name;
     private int[] coordinates;
-    private boolean isStart = false;
     private boolean isEnd = false;
     private Node parent = null;
     private boolean isExplored = false;
@@ -106,7 +133,6 @@ class Node implements Iterable<Node> {
         switch (name) {
             case 'S':
                 this.name = 'a';
-                isStart = true;
                 break;
             case 'E':
                 this.name = 'z';
@@ -130,10 +156,6 @@ class Node implements Iterable<Node> {
         parent = node;
     }
 
-    public boolean isStart() {
-        return isStart;
-    }
-
     public boolean isEnd() {
         return isEnd;
     }
@@ -154,6 +176,11 @@ class Node implements Iterable<Node> {
             iterator.next();
         }
         return count;
+    }
+
+    public void reset() {
+        parent = null;
+        isExplored = false;
     }
 
     @Override
@@ -179,7 +206,8 @@ class Node implements Iterable<Node> {
 
     @Override
     public String toString() {
-        return Character.toString(name);
+        String coordinates = Arrays.toString(getCoordinates());
+        return Character.toString(name) + " at " + coordinates;
     }
 }
 
